--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,8 @@ dependencies = [
     "feedparser>=6.0.12",
     "html2text>=2025.4.15",
     "httpx>=0.28.1",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "pytest>=9.0.2",
     "pyyaml>=6.0.3",
 ]
